# flask-notes

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vite.config.js
.github/workflows/: main.yml  production.yml  staging.yml
app/: __init__.py  account.py  auth.py  decorators.py  flask_storage.py  forms.py  notes.py  supabase.py  utils.py
src/: markdown-editor.css  markdown-editor.js
static/: app.css  markdown-editor.css  markdown-editor.js
supabase/: config.toml
supabase/auth/email/: confirmation.html  email-change.html  recovery.html
supabase/functions/_shared/: cors.ts
supabase/functions/delete-account/: index.ts
supabase/migrations/: 20230217193007_add_profiles_table.sql  20230924140932_add_shortkey.sql  20230924205231_add_notes.sql  20251124155952_update_functions_with_search_path.sql  20251124194746_update_rls_for_better_performance.sql
templates/: 404.html  5xx.html  _helpers.html  base_layout.html  dashboard.html  index.html  layout.html  note.html  profile.html
templates/account/: delete.html  identities.html  index.html  update-email.html  update-password.html  update.html
templates/auth/: _form_partial.html  forgotpassword.html  layout.html  signin.html  signup.html  verify-token.html
templates/notes/: edit.html  index.html  new.html
