[project]
name = "flask-notes"
version = "0.3.0"
description = ""
authors = [{ name = "Andrew Smith", email = "a.smith@silentworks.co.uk" }]
requires-python = "~=3.12.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "supabase>=2.24.0,<3",
    "flask>=2.3.3,<3",
    "flask-wtf>=1.1.1,<2",
    "email-validator>=2.0.0.post2,<3",
    "poetry-dotenv-plugin>=0.2.0,<0.3",
    "gunicorn>=21.2.0,<22",
    "pillow>=10.0.1,<11",
    "requests>=2.31.0,<3",
    "python-dotenv>=1.0.0,<2",
    "flask-markdown>=0.3,<0.4",
    "httpx==0.28.0",
]

[tool.flake8]
ignore = ["F401", "E402"]
exclude = [".venv"]

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
